# safe

./: .gitignore  CMakeLists.txt  Note.md  README.md  app.rc  cleanup.bat
core/include/core/: cli.hpp  filesystem.hpp  folder.hpp  renderer.hpp  types.hpp
core/include/ui/: ui.hpp
core/libs/imgui/backends/: imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_win32.cpp  imgui_impl_win32.h
core/src/: main.cpp
core/src/core/: cli.cpp  filesystem.cpp  folder.cpp  renderer.cpp  renderer_impl.cpp  types.cpp
core/src/ui/: ui.cpp
docs/: note.md
installer/: Note.md
installer/inno/: Note.md  SafeInstaller.iss
